# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.976 2012/03/16 19:12:45 ranger Exp $

  16 Mar 2012; Brent Baude <ranger@gentoo.org> portage-2.1.10.49.ebuild:
  Marking portage-2.1.10.49 ppc for bug 408391

  16 Mar 2012; Brent Baude <ranger@gentoo.org> portage-2.1.10.49.ebuild:
  Marking portage-2.1.10.49 ppc64 for bug 408391

  16 Mar 2012; Jeroen Roovers <jer@gentoo.org> portage-2.1.10.49.ebuild:
  Stable for HPPA (bug #408391).

*portage-2.2.0_alpha90 (05 Mar 2012)

  05 Mar 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha90.ebuild:
  2.2.0_alpha90 version bump. This fixes bug #399863 (autounmask message shows
  wrong parent atom) and bug #406837 (erroneously preserved libGLU.so.1 after
  mesa update) Bug #210077 tracks all bugs fixed since portage-2.1.x.

  01 Mar 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.48.ebuild,
  -portage-2.2.0_alpha88.ebuild:
  Remove old versions.

*portage-2.2.0_alpha89 (23 Feb 2012)

  23 Feb 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha89.ebuild:
  2.2.0_alpha89 version bump. This includes all of the fixes in
  portage-2.1.10.49. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.49 (23 Feb 2012)

  23 Feb 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.49.ebuild:
  2.1.10.49 version bump. This fixes bug #384397 (remove orphan symlinks to
  directories) and bug #405327 (erroneous rename of absolute symlink to
  symlink.bz2). Bug #402213 tracks all bugs fixed since portage-2.1.10.44.

  23 Feb 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.41.ebuild,
  -portage-2.1.10.46.ebuild, -portage-2.2.0_alpha86.ebuild:
  Remove old versions.

  21 Feb 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.10.46.ebuild,
  portage-2.1.10.48.ebuild:
  Bug #402215: Re-add ~alpha, ~m68k, ~mips, and ~s390 keywords, since the