@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.976 2012/03/16 19:12:45 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.977 2012/03/17 01:57:23 zmedico Exp $
+
+  17 Mar 2012; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
+  Call the new Makefile for src_compile and src_install.
 
   16 Mar 2012; Brent Baude <ranger@gentoo.org> portage-2.1.10.49.ebuild:
   Marking portage-2.1.10.49 ppc for bug 408391
